--- a/app/src/main/res/layout/activity_input_cri.xml
+++ b/app/src/main/res/layout/activity_input_cri.xml
@@ -12,7 +12,7 @@
         android:text="@string/sss"/>
 <TableLayout
     android:layout_width="fill_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:stretchColumns="*">
     <TableRow>
         <TextView
@@ -95,90 +95,29 @@
             />
     </TableRow>
 </TableLayout>
-<!--    <TextView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Search by Something"/>-->
-
-<!--    <Spinner-->
-<!--        android:id="@+id/spinner7"-->
-<!--        android:layout_width="195dp"-->
-<!--        android:layout_height="48dp"-->
-<!--        android:layout_marginStart="16dp"-->
-<!--        android:layout_marginTop="100dp"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/textView7"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="69dp"-->
-<!--        android:layout_marginTop="172dp"-->
-<!--        android:layout_marginEnd="68dp"-->
-<!--        android:text="TextView"-->
-<!--        app:layout_constraintEnd_toEndOf="@+id/spinner7"-->
-<!--        app:layout_constraintHorizontal_bias="0.0"-->
-<!--        app:layout_constraintStart_toStartOf="@+id/spinner7"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--    <Spinner-->
-<!--        android:id="@+id/spinner6"-->
-<!--        android:layout_width="195dp"-->
-<!--        android:layout_height="48dp"-->
-<!--        android:layout_marginStart="208dp"-->
-<!--        android:layout_marginTop="100dp"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/textView6"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="172dp"-->
-<!--        android:text="TextView"-->
-<!--        app:layout_constraintEnd_toEndOf="@+id/spinner6"-->
-<!--        app:layout_constraintHorizontal_bias="0.474"-->
-<!--        app:layout_constraintStart_toStartOf="@+id/spinner6"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--    <Spinner-->
-<!--        android:id="@+id/spinner5"-->
-<!--        android:layout_width="195dp"-->
-<!--        android:layout_height="48dp"-->
-<!--        android:layout_marginStart="208dp"-->
-<!--        android:layout_marginTop="4dp"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/textView5"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="80dp"-->
-<!--        android:text="TextView"-->
-<!--        app:layout_constraintEnd_toEndOf="@+id/spinner5"-->
-<!--        app:layout_constraintHorizontal_bias="0.474"-->
-<!--        app:layout_constraintStart_toStartOf="@+id/spinner5"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--    <Spinner-->
-<!--        android:id="@+id/spinner"-->
-<!--        android:layout_width="195dp"-->
-<!--        android:layout_height="48dp"-->
-<!--        android:layout_marginStart="16dp"-->
-<!--        android:layout_marginTop="4dp"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/textView"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="80dp"-->
-<!--        android:text="TextView"-->
-<!--        app:layout_constraintEnd_toEndOf="@+id/spinner"-->
-<!--        app:layout_constraintStart_toStartOf="@+id/spinner"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-
+    <RadioGroup
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/radiogroup"
+        >
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/sortbyId"
+            android:checked="true"
+            android:text="@string/sortid"/>
+        <RadioButton
+            android:id="@+id/sortbyName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:text="@string/sortname"/>
+    </RadioGroup>
+    <Button
+        android:id="@+id/submitbutton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/HKMU_Blue"
+        android:text="@string/submit"/>
 </LinearLayout>
