--- a/app/src/main/res/layout/activity_input_name.xml
+++ b/app/src/main/res/layout/activity_input_name.xml
@@ -45,7 +45,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/HKMU_Blue"
-        android:text="Submit" />
+        android:text="@string/submit" />
 
 
 </LinearLayout>
