--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,5 +19,11 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/HKMU_Blue"
         android:text="@string/maincat" />
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/HKMU_Blue"
+        android:text="@string/usefulweb"/>
 
 </LinearLayout>
