--- a/app/src/main/res/layout/list_view_layout.xml
+++ b/app/src/main/res/layout/list_view_layout.xml
@@ -9,7 +9,7 @@
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#3700B3"
+        android:textColor="?attr/colorPrimary"
         android:textSize="16sp"
         android:textStyle="bold"/>
 
@@ -17,7 +17,7 @@
         android:id="@+id/tele"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#03DAC5" />
+        android:textColor="?attr/colorSecondaryVariant" />
 
     <TextView
         android:id="@+id/address"
