--- a/app/src/main/res/layout/activity_useful_web.xml
+++ b/app/src/main/res/layout/activity_useful_web.xml
@@ -41,7 +41,7 @@
                     android:id="@+id/web1"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
-                    tools:srcCompat="@tools:sample/backgrounds/scenic" />
+                    tools:srcCompat="@drawable/web1" />
 
                 <ImageButton
                     android:id="@+id/web2"
