--- a/app/src/main/res/layout/activity_useful_web.xml
+++ b/app/src/main/res/layout/activity_useful_web.xml
@@ -49,7 +49,8 @@
                     android:id="@+id/web2"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
-                    tools:srcCompat="@tools:sample/backgrounds/scenic" />
+                    android:src="@drawable/web2"
+                    android:scaleType="centerInside"/>
 
                 <ImageButton
                     android:id="@+id/web3"
