--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="fill_parent"
     android:layout_gravity="center_vertical"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/bg">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:background="@drawable/group_student"/>
+
+    <TableLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:stretchColumns="*"
+        >
+
+        <TableRow>
     <Button
         android:id="@+id/button1"
         android:layout_width="match_parent"
@@ -19,11 +32,18 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/HKMU_Blue"
         android:text="@string/maincat" />
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/HKMU_Blue"
-        android:text="@string/usefulweb"/>
+        </TableRow>
+        <TableRow>
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/HKMU_Blue"
+                android:text="@string/usefulweb"
+                android:layout_span="2"/>
+        </TableRow>
+
+    </TableLayout>
+
 
 </LinearLayout>
