--- a/app/src/main/res/layout/activity_useful_web.xml
+++ b/app/src/main/res/layout/activity_useful_web.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:padding="15px">
+    android:padding="15px"
+    android:background="@drawable/bg">
 
 
     <LinearLayout
@@ -16,6 +17,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="10px">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/usefulweb"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -30,12 +38,7 @@
                 android:scrollbarAlwaysDrawVerticalTrack="true"
                 android:scrollbars="vertical">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Useful Websites"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
+
 
                 <ImageButton
                     android:id="@+id/web1"
@@ -48,14 +51,18 @@
                 <ImageButton
                     android:id="@+id/web2"
                     android:layout_width="match_parent"
+                    android:src="@drawable/web2"
+                    android:adjustViewBounds="true"
                     android:layout_height="150dp"
-                    tools:srcCompat="@tools:sample/backgrounds/scenic" />
+                    android:scaleType="centerInside"/>
 
                 <ImageButton
                     android:id="@+id/web3"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
-                    tools:srcCompat="@tools:sample/backgrounds/scenic" />
+                    android:src="@drawable/web3"
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerInside"/>
 
 
             </LinearLayout>
@@ -66,6 +73,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/HKMU_Blue"
-            android:text="Go back to Search" />
+            android:text="@string/backtoresearch" />
     </LinearLayout>
 </LinearLayout>
