--- a/app/src/main/res/layout/activity_input_cri.xml
+++ b/app/src/main/res/layout/activity_input_cri.xml
@@ -7,7 +7,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/sss"/>
+        android:text="@string/sss"
+        android:textColor="@color/black"/>
 <TableLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
@@ -15,7 +16,8 @@
     <TableRow>
         <TextView
             android:layout_width="wrap_content"
-            android:text="@string/category"/>
+            android:text="@string/category"
+            android:textColor="@color/black"/>
     </TableRow>
     <TableRow>
         <Spinner
@@ -29,10 +31,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:text="@string/gender"
+            android:textColor="@color/black"
             />
         <TextView
             android:layout_width="wrap_content"
-            android:text="@string/session"/>
+            android:text="@string/session"
+            android:textColor="@color/black"/>
     </TableRow>
     <TableRow>
         <Spinner
@@ -104,13 +108,15 @@
             android:layout_height="wrap_content"
             android:id="@+id/sortbyId"
             android:checked="true"
-            android:text="@string/sortid"/>
+            android:text="@string/sortid"
+            android:textColor="@color/black"/>
         <RadioButton
             android:id="@+id/sortbyName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="false"
-            android:text="@string/sortname"/>
+            android:text="@string/sortname"
+            android:textColor="@color/black"/>
     </RadioGroup>
     <Button
         android:id="@+id/submitbutton"
