--- a/app/src/main/res/layout/list_view_layout.xml
+++ b/app/src/main/res/layout/list_view_layout.xml
@@ -9,7 +9,7 @@
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="?attr/colorPrimary"
+        android:textColor="?attr/colorPrimaryVariant"
         android:textSize="16sp"
         android:textStyle="bold"/>
 
